Sample App. Running tests, uvicorn without tasks, apikit.ini. Using docker directly. Start/Stop MongoDB and Redis.

--- a/sample_app/Makefile
+++ b/sample_app/Makefile
@@ -60,7 +60,7 @@ ping:
 	@../env/bin/python ../apikit_cli/apikit.py ping
 	@echo '--------------------------------------'
 
-db_migration:
+db_migrate:
 	@../env/bin/python ../apikit_cli/apikit.py db_migrate
 	@echo '--------------------------------------'
 
