--- a/sample_app/Dockerfile
+++ b/sample_app/Dockerfile
@@ -8,4 +8,13 @@ FROM apikit-dev:latest
 # RUN env/bin/pip install -r requirements-app.txt --no-cache-dir
 # COPY ./apps* /app/apps
 
-RUN apk add curl
+RUN apk add curl nano
+
+ENV API_VERSION=dev
+
+WORKDIR /app
+COPY requirements-app.txt .
+RUN env/bin/pip install -r requirements-app.txt --no-cache-dir
+COPY ./apps* /app/apps
+
+# /app/env/bin/uvicorn api_web.version_server:asgi_app --host 0.0.0.0 --port 50000 --workers 1 --loop uvloop --interface asgi3 --lifespan on --no-server-header --no-date-header
