--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,4 +1,4 @@
-name: Build APIKit CLI Binaries
+name: Release APIKit CLI Binaries
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
   workflow_dispatch: # manual trigger
 
 jobs:
-  build:
+  release:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
