New Info command

--- a/sample_app/Makefile
+++ b/sample_app/Makefile
@@ -51,6 +51,10 @@ ci:
 	@../env/bin/python ../apikit_cli/apikit.py ci
 	@echo '--------------------------------------'
 
+info:
+	@../env/bin/python ../apikit_cli/apikit.py info
+	@echo '--------------------------------------'
+
 start:
 	@../env/bin/python ../apikit_cli/apikit.py start
 	@#../env/bin/python ../apikit_cli/apikit.py start --port 33334 --verbose
